--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,10 +1,10 @@
 use_frameworks!
 
-platform:ios, '9.0'
+platform:ios, '10.0'
 
 target 'SwiftWalle_Example' do
   pod 'SwiftWalle', :path => '../'
-
+  pod 'SwiftLint', :configurations => ['Debug']
   target 'SwiftWalle_Tests' do
     inherit! :search_paths
   end
